# doorman-agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  celery-doorman.service  celery_doorman.py  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
src/doorman_agent/: agent.py  api_client.py  audit.py  cli.py  collector.py  config.py  logger.py  models.py  simulator.py
tests/: json_response_mock.json  test_config.py
