[tool.poetry]
name = "doorman-agent"
version = "0.1.0a3"
description = "Privacy-first monitoring agent for Celery + Redis"
authors = ["Hernán Chilabert <hchilabert@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/herchila/doorman-agent"
keywords = ["celery", "redis", "monitoring", "alerting", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
packages = [{include = "doorman_agent", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
redis = ">=4.0.0,<6.0.0"
celery = ">=5.2.0,<6.0.0"
pyyaml = ">=6.0"
pydantic = ">=2.0.0,<3.0.0"
rich = ">=13.0.0,<14.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"
ruff = ">=0.1.0"
mypy = ">=1.0"
types-pyyaml = ">=6.0"
types-redis = ">=4.0"
pre-commit = ">=3.0"

[tool.poetry.scripts]
doorman-agent = "doorman_agent.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
